--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
-{
+  {
   "compilerOptions": {
-    "module": "es6",
-    "target": "es5",
-    "jsx": "react"
+    "target": "es6",                          
+    "module": "esnext",
+    "jsx": "react",
+    "strict": true,  
+    "outDir": "build",
+    "rootDir": "src"
   },
   "exclude": ["node_modules", "build"]
 }
